--- a/package.json
+++ b/package.json
@@ -116,6 +116,11 @@
     "typescript": "^5.8.3",
     "vitepress": "^1.6.3"
   },
+  "pnpm": {
+    "overrides": {
+      "esbuild": "^0.25.0"
+    }
+  },
   "lint-staged": {
     "*.{js,ts}": [
       "biome check --write --no-errors-on-unmatched"
